--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,6 +1,40 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b0b365">  <td>20/02/21 02:27:18</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="understandtestng.testng()[pri:0, instance:com.java.testing.youtube.understandtestng@58a9760d]">testng</td> 
-  <td>main@2123444693</td>   <td></td> </tr>
+<tr bgcolor="cd7699">  <td>20/02/21 12:36:05</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;GoogleTest.setUp()[pri:0, instance:com.java.testing.youtube.GoogleTest@10aa41f2]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1997353766</td>   <td></td> </tr>
+<tr bgcolor="cd7699">  <td>20/02/21 12:36:19</td>   <td>13581</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GoogleTest.googleTitleTest()[pri:1, instance:com.java.testing.youtube.GoogleTest@10aa41f2]">googleTitleTest</td> 
+  <td>main@1997353766</td>   <td></td> </tr>
+<tr bgcolor="cd7699">  <td>20/02/21 12:36:19</td>   <td>13614</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;GoogleTest.tearDown()[pri:0, instance:com.java.testing.youtube.GoogleTest@10aa41f2]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1997353766</td>   <td></td> </tr>
+<tr bgcolor="cd7699">  <td>20/02/21 12:36:20</td>   <td>14696</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;GoogleTest.setUp()[pri:0, instance:com.java.testing.youtube.GoogleTest@10aa41f2]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1997353766</td>   <td></td> </tr>
+<tr bgcolor="cd7699">  <td>20/02/21 12:36:33</td>   <td>27463</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GoogleTest.mailLinkTest()[pri:2, instance:com.java.testing.youtube.GoogleTest@10aa41f2]">mailLinkTest</td> 
+  <td>main@1997353766</td>   <td></td> </tr>
+<tr bgcolor="cd7699">  <td>20/02/21 12:37:03</td>   <td>57791</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;GoogleTest.tearDown()[pri:0, instance:com.java.testing.youtube.GoogleTest@10aa41f2]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1997353766</td>   <td></td> </tr>
+<tr bgcolor="cd7699">  <td>20/02/21 12:37:04</td>   <td>58596</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;GoogleTest.setUp()[pri:0, instance:com.java.testing.youtube.GoogleTest@10aa41f2]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1997353766</td>   <td></td> </tr>
+<tr bgcolor="cd7699">  <td>20/02/21 12:37:19</td>   <td>73060</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GoogleTest.googleLogoTest()[pri:3, instance:com.java.testing.youtube.GoogleTest@10aa41f2]">googleLogoTest</td> 
+  <td>main@1997353766</td>   <td></td> </tr>
+<tr bgcolor="cd7699">  <td>20/02/21 12:37:19</td>   <td>73240</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;GoogleTest.tearDown()[pri:0, instance:com.java.testing.youtube.GoogleTest@10aa41f2]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1997353766</td>   <td></td> </tr>
+<tr bgcolor="cd7699">  <td>20/02/21 12:37:20</td>   <td>74183</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;GoogleTest.setUp()[pri:0, instance:com.java.testing.youtube.GoogleTest@10aa41f2]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1997353766</td>   <td></td> </tr>
+<tr bgcolor="cd7699">  <td>20/02/21 12:37:33</td>   <td>87288</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GoogleTest.test1()[pri:4, instance:com.java.testing.youtube.GoogleTest@10aa41f2]">test1</td> 
+  <td>main@1997353766</td>   <td></td> </tr>
+<tr bgcolor="cd7699">  <td>20/02/21 12:37:33</td>   <td>87295</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;GoogleTest.tearDown()[pri:0, instance:com.java.testing.youtube.GoogleTest@10aa41f2]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1997353766</td>   <td></td> </tr>
+<tr bgcolor="cd7699">  <td>20/02/21 12:37:35</td>   <td>89157</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;GoogleTest.setUp()[pri:0, instance:com.java.testing.youtube.GoogleTest@10aa41f2]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1997353766</td>   <td></td> </tr>
+<tr bgcolor="cd7699">  <td>20/02/21 12:37:49</td>   <td>103827</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GoogleTest.test2()[pri:5, instance:com.java.testing.youtube.GoogleTest@10aa41f2]">test2</td> 
+  <td>main@1997353766</td>   <td></td> </tr>
+<tr bgcolor="cd7699">  <td>20/02/21 12:37:49</td>   <td>103830</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;GoogleTest.tearDown()[pri:0, instance:com.java.testing.youtube.GoogleTest@10aa41f2]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1997353766</td>   <td></td> </tr>
+<tr bgcolor="cd7699">  <td>20/02/21 12:37:51</td>   <td>105988</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;GoogleTest.setUp()[pri:0, instance:com.java.testing.youtube.GoogleTest@10aa41f2]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1997353766</td>   <td></td> </tr>
+<tr bgcolor="cd7699">  <td>20/02/21 12:38:05</td>   <td>119184</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GoogleTest.test3()[pri:6, instance:com.java.testing.youtube.GoogleTest@10aa41f2]">test3</td> 
+  <td>main@1997353766</td>   <td></td> </tr>
+<tr bgcolor="cd7699">  <td>20/02/21 12:38:05</td>   <td>119187</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;GoogleTest.tearDown()[pri:0, instance:com.java.testing.youtube.GoogleTest@10aa41f2]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1997353766</td>   <td></td> </tr>
 </table>
