--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,41 +4,27 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.java.testing.youtube.GoogleTest</td>
+<td>com.java.testing.youtube.TestNgFeatures</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>googleLogoTest</td>
-<td>Logo </td>
-</tr>
+<td>SearchPageTest</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>mailLinkTest</td>
-<td>Link Test </td>
-</tr>
+<td>HomePageTest</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>test2</td>
-<td>Test </td>
-</tr>
+<td>RegPageTest</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>test3</td>
-<td>Test </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>googleTitleTest</td>
-<td>Title </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>test1</td>
-<td>Test </td>
-</tr>
+<td>loginTest</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
@@ -46,16 +32,8 @@
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
 <tr>
-<td>&nbsp;</td>
-<td>setUp</td>
-<td>&nbsp;</td></tr>
-<tr>
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
-<tr>
-<td>&nbsp;</td>
-<td>tearDown</td>
-<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
