--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,40 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="cd7699">  <td>20/02/21 12:37:19</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GoogleTest.googleLogoTest()[pri:3, instance:com.java.testing.youtube.GoogleTest@10aa41f2]">googleLogoTest</td> 
-  <td>main@1997353766</td>   <td></td> </tr>
-<tr bgcolor="cd7699">  <td>20/02/21 12:36:19</td>   <td>-59479</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GoogleTest.googleTitleTest()[pri:1, instance:com.java.testing.youtube.GoogleTest@10aa41f2]">googleTitleTest</td> 
-  <td>main@1997353766</td>   <td></td> </tr>
-<tr bgcolor="cd7699">  <td>20/02/21 12:36:33</td>   <td>-45597</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GoogleTest.mailLinkTest()[pri:2, instance:com.java.testing.youtube.GoogleTest@10aa41f2]">mailLinkTest</td> 
-  <td>main@1997353766</td>   <td></td> </tr>
-<tr bgcolor="cd7699">  <td>20/02/21 12:36:05</td>   <td>-73060</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;GoogleTest.setUp()[pri:0, instance:com.java.testing.youtube.GoogleTest@10aa41f2]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1997353766</td>   <td></td> </tr>
-<tr bgcolor="cd7699">  <td>20/02/21 12:36:20</td>   <td>-58364</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;GoogleTest.setUp()[pri:0, instance:com.java.testing.youtube.GoogleTest@10aa41f2]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1997353766</td>   <td></td> </tr>
-<tr bgcolor="cd7699">  <td>20/02/21 12:37:04</td>   <td>-14464</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;GoogleTest.setUp()[pri:0, instance:com.java.testing.youtube.GoogleTest@10aa41f2]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1997353766</td>   <td></td> </tr>
-<tr bgcolor="cd7699">  <td>20/02/21 12:37:20</td>   <td>1123</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;GoogleTest.setUp()[pri:0, instance:com.java.testing.youtube.GoogleTest@10aa41f2]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1997353766</td>   <td></td> </tr>
-<tr bgcolor="cd7699">  <td>20/02/21 12:37:35</td>   <td>16097</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;GoogleTest.setUp()[pri:0, instance:com.java.testing.youtube.GoogleTest@10aa41f2]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1997353766</td>   <td></td> </tr>
-<tr bgcolor="cd7699">  <td>20/02/21 12:37:51</td>   <td>32928</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;GoogleTest.setUp()[pri:0, instance:com.java.testing.youtube.GoogleTest@10aa41f2]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1997353766</td>   <td></td> </tr>
-<tr bgcolor="cd7699">  <td>20/02/21 12:36:19</td>   <td>-59446</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;GoogleTest.tearDown()[pri:0, instance:com.java.testing.youtube.GoogleTest@10aa41f2]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1997353766</td>   <td></td> </tr>
-<tr bgcolor="cd7699">  <td>20/02/21 12:37:03</td>   <td>-15269</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;GoogleTest.tearDown()[pri:0, instance:com.java.testing.youtube.GoogleTest@10aa41f2]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1997353766</td>   <td></td> </tr>
-<tr bgcolor="cd7699">  <td>20/02/21 12:37:19</td>   <td>180</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;GoogleTest.tearDown()[pri:0, instance:com.java.testing.youtube.GoogleTest@10aa41f2]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1997353766</td>   <td></td> </tr>
-<tr bgcolor="cd7699">  <td>20/02/21 12:37:33</td>   <td>14235</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;GoogleTest.tearDown()[pri:0, instance:com.java.testing.youtube.GoogleTest@10aa41f2]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1997353766</td>   <td></td> </tr>
-<tr bgcolor="cd7699">  <td>20/02/21 12:37:49</td>   <td>30770</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;GoogleTest.tearDown()[pri:0, instance:com.java.testing.youtube.GoogleTest@10aa41f2]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1997353766</td>   <td></td> </tr>
-<tr bgcolor="cd7699">  <td>20/02/21 12:38:05</td>   <td>46127</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;GoogleTest.tearDown()[pri:0, instance:com.java.testing.youtube.GoogleTest@10aa41f2]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1997353766</td>   <td></td> </tr>
-<tr bgcolor="cd7699">  <td>20/02/21 12:37:33</td>   <td>14228</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GoogleTest.test1()[pri:4, instance:com.java.testing.youtube.GoogleTest@10aa41f2]">test1</td> 
-  <td>main@1997353766</td>   <td></td> </tr>
-<tr bgcolor="cd7699">  <td>20/02/21 12:37:49</td>   <td>30767</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GoogleTest.test2()[pri:5, instance:com.java.testing.youtube.GoogleTest@10aa41f2]">test2</td> 
-  <td>main@1997353766</td>   <td></td> </tr>
-<tr bgcolor="cd7699">  <td>20/02/21 12:38:05</td>   <td>46124</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GoogleTest.test3()[pri:6, instance:com.java.testing.youtube.GoogleTest@10aa41f2]">test3</td> 
-  <td>main@1997353766</td>   <td></td> </tr>
+<tr bgcolor="cd7699">  <td>20/02/21 13:04:06</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNgFeatures.HomePageTest()[pri:0, instance:com.java.testing.youtube.TestNgFeatures@75db5df9]">HomePageTest</td> 
+  <td>main@1376790324</td>   <td></td> </tr>
+<tr bgcolor="cd7699">  <td>20/02/21 13:04:06</td>   <td>32</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNgFeatures.RegPageTest()[pri:0, instance:com.java.testing.youtube.TestNgFeatures@75db5df9]">RegPageTest</td> 
+  <td>main@1376790324</td>   <td></td> </tr>
+<tr bgcolor="cd7699">  <td>20/02/21 13:04:06</td>   <td>66</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNgFeatures.SearchPageTest()[pri:0, instance:com.java.testing.youtube.TestNgFeatures@75db5df9]">SearchPageTest</td> 
+  <td>main@1376790324</td>   <td></td> </tr>
+<tr bgcolor="cd7699">  <td>20/02/21 13:04:06</td>   <td>-61</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNgFeatures.loginTest()[pri:0, instance:com.java.testing.youtube.TestNgFeatures@75db5df9]">loginTest</td> 
+  <td>main@1376790324</td>   <td></td> </tr>
 </table>
