--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,13 +9,19 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">195</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">10</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">434</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="4">com.java.testing.youtube.TestNgFeatures</td><td><a href="#m0">HomePageTest</a></td><td rowspan="1">1582268646130</td><td rowspan="1">9</td></tr><tr class="passedeven"><td><a href="#m1">RegPageTest</a></td><td rowspan="1">1582268646162</td><td rowspan="1">6</td></tr><tr class="passedeven"><td><a href="#m2">SearchPageTest</a></td><td rowspan="1">1582268646196</td><td rowspan="1">8</td></tr><tr class="passedeven"><td><a href="#m3">loginTest</a></td><td rowspan="1">1582268646071</td><td rowspan="1">27</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="10">com.java.testing.youtube.InvocationCountTest</td><td><a href="#m0">sum</a></td><td rowspan="10">1582272790045</td><td rowspan="10">7</td></tr><tr class="passedeven"><td><a href="#m1">sum</a></td></tr><tr class="passedeven"><td><a href="#m2">sum</a></td></tr><tr class="passedeven"><td><a href="#m3">sum</a></td></tr><tr class="passedeven"><td><a href="#m4">sum</a></td></tr><tr class="passedeven"><td><a href="#m5">sum</a></td></tr><tr class="passedeven"><td><a href="#m6">sum</a></td></tr><tr class="passedeven"><td><a href="#m7">sum</a></td></tr><tr class="passedeven"><td><a href="#m8">sum</a></td></tr><tr class="passedeven"><td><a href="#m9">sum</a></td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">com.java.testing.youtube.TestNgFeatures#HomePageTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">com.java.testing.youtube.TestNgFeatures#RegPageTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">com.java.testing.youtube.TestNgFeatures#SearchPageTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">com.java.testing.youtube.TestNgFeatures#loginTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">com.java.testing.youtube.InvocationCountTest#sum</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">com.java.testing.youtube.InvocationCountTest#sum</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">com.java.testing.youtube.InvocationCountTest#sum</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">com.java.testing.youtube.InvocationCountTest#sum</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">com.java.testing.youtube.InvocationCountTest#sum</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m5">com.java.testing.youtube.InvocationCountTest#sum</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m6">com.java.testing.youtube.InvocationCountTest#sum</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m7">com.java.testing.youtube.InvocationCountTest#sum</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m8">com.java.testing.youtube.InvocationCountTest#sum</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m9">com.java.testing.youtube.InvocationCountTest#sum</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
