--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\Mahbub\AppData\Local\Temp\testng-eclipse--725683772\testng-customsuite.xml</span>
+                    <span>C:\Users\Mahbub\AppData\Local\Temp\testng-eclipse--1852900123\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">4 methods,   4 passed</span>
+                    <span class="method-stats">10 methods,   10 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -102,22 +102,52 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.java.testing.youtube.TestNgFeatures" class="method navigator-link" hash-for-method="HomePageTest">HomePageTest</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.java.testing.youtube.InvocationCountTest" class="method navigator-link" hash-for-method="sum">sum</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.java.testing.youtube.TestNgFeatures" class="method navigator-link" hash-for-method="RegPageTest">RegPageTest</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.java.testing.youtube.InvocationCountTest" class="method navigator-link" hash-for-method="sum">sum</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.java.testing.youtube.TestNgFeatures" class="method navigator-link" hash-for-method="SearchPageTest">SearchPageTest</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.java.testing.youtube.InvocationCountTest" class="method navigator-link" hash-for-method="sum">sum</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.java.testing.youtube.TestNgFeatures" class="method navigator-link" hash-for-method="loginTest">loginTest</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.java.testing.youtube.InvocationCountTest" class="method navigator-link" hash-for-method="sum">sum</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="com.java.testing.youtube.InvocationCountTest" class="method navigator-link" hash-for-method="sum">sum</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="com.java.testing.youtube.InvocationCountTest" class="method navigator-link" hash-for-method="sum">sum</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="com.java.testing.youtube.InvocationCountTest" class="method navigator-link" hash-for-method="sum">sum</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="com.java.testing.youtube.InvocationCountTest" class="method navigator-link" hash-for-method="sum">sum</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="com.java.testing.youtube.InvocationCountTest" class="method navigator-link" hash-for-method="sum">sum</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="com.java.testing.youtube.InvocationCountTest" class="method navigator-link" hash-for-method="sum">sum</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -135,35 +165,77 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.java.testing.youtube.TestNgFeatures</span>
+              <span class="class-name">com.java.testing.youtube.InvocationCountTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="HomePageTest">
-                  </a> <!-- HomePageTest -->
-                  <span class="method-name">HomePageTest</span>
+                  <a name="sum">
+                  </a> <!-- sum -->
+                  <span class="method-name">sum</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="RegPageTest">
-                  </a> <!-- RegPageTest -->
-                  <span class="method-name">RegPageTest</span>
+                  <a name="sum">
+                  </a> <!-- sum -->
+                  <span class="method-name">sum</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="SearchPageTest">
-                  </a> <!-- SearchPageTest -->
-                  <span class="method-name">SearchPageTest</span>
+                  <a name="sum">
+                  </a> <!-- sum -->
+                  <span class="method-name">sum</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="loginTest">
-                  </a> <!-- loginTest -->
-                  <span class="method-name">loginTest</span>
+                  <a name="sum">
+                  </a> <!-- sum -->
+                  <span class="method-name">sum</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="sum">
+                  </a> <!-- sum -->
+                  <span class="method-name">sum</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="sum">
+                  </a> <!-- sum -->
+                  <span class="method-name">sum</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="sum">
+                  </a> <!-- sum -->
+                  <span class="method-name">sum</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="sum">
+                  </a> <!-- sum -->
+                  <span class="method-name">sum</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="sum">
+                  </a> <!-- sum -->
+                  <span class="method-name">sum</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="sum">
+                  </a> <!-- sum -->
+                  <span class="method-name">sum</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -171,7 +243,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Mahbub\AppData\Local\Temp\testng-eclipse--725683772\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Mahbub\AppData\Local\Temp\testng-eclipse--1852900123\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -180,7 +252,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.java.testing.youtube.TestNgFeatures&quot;/&gt;
+      &lt;class name=&quot;com.java.testing.youtube.InvocationCountTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -220,28 +292,52 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(4);
+data.addRows(10);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'loginTest')
-data.setCell(0, 2, 'com.java.testing.youtube.TestNgFeatures')
-data.setCell(0, 3, 27);
+data.setCell(0, 1, 'sum')
+data.setCell(0, 2, 'com.java.testing.youtube.InvocationCountTest')
+data.setCell(0, 3, 104);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'HomePageTest')
-data.setCell(1, 2, 'com.java.testing.youtube.TestNgFeatures')
-data.setCell(1, 3, 9);
+data.setCell(1, 1, 'sum')
+data.setCell(1, 2, 'com.java.testing.youtube.InvocationCountTest')
+data.setCell(1, 3, 26);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'SearchPageTest')
-data.setCell(2, 2, 'com.java.testing.youtube.TestNgFeatures')
+data.setCell(2, 1, 'sum')
+data.setCell(2, 2, 'com.java.testing.youtube.InvocationCountTest')
 data.setCell(2, 3, 8);
 data.setCell(3, 0, 3)
-data.setCell(3, 1, 'RegPageTest')
-data.setCell(3, 2, 'com.java.testing.youtube.TestNgFeatures')
-data.setCell(3, 3, 6);
+data.setCell(3, 1, 'sum')
+data.setCell(3, 2, 'com.java.testing.youtube.InvocationCountTest')
+data.setCell(3, 3, 8);
+data.setCell(4, 0, 4)
+data.setCell(4, 1, 'sum')
+data.setCell(4, 2, 'com.java.testing.youtube.InvocationCountTest')
+data.setCell(4, 3, 7);
+data.setCell(5, 0, 5)
+data.setCell(5, 1, 'sum')
+data.setCell(5, 2, 'com.java.testing.youtube.InvocationCountTest')
+data.setCell(5, 3, 7);
+data.setCell(6, 0, 6)
+data.setCell(6, 1, 'sum')
+data.setCell(6, 2, 'com.java.testing.youtube.InvocationCountTest')
+data.setCell(6, 3, 7);
+data.setCell(7, 0, 7)
+data.setCell(7, 1, 'sum')
+data.setCell(7, 2, 'com.java.testing.youtube.InvocationCountTest')
+data.setCell(7, 3, 6);
+data.setCell(8, 0, 8)
+data.setCell(8, 1, 'sum')
+data.setCell(8, 2, 'com.java.testing.youtube.InvocationCountTest')
+data.setCell(8, 3, 4);
+data.setCell(9, 0, 9)
+data.setCell(9, 1, 'sum')
+data.setCell(9, 2, 'com.java.testing.youtube.InvocationCountTest')
+data.setCell(9, 3, 3);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 50 ms</span>
+              <span class="suite-total-time">Total running time: 180 ms</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -267,22 +363,46 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.java.testing.youtube.TestNgFeatures</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.java.testing.youtube.InvocationCountTest</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">loginTest</span>
+                <span class="method-name">sum</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">HomePageTest</span>
-                <span class="method-start">59 ms</span>
+                <span class="method-name">sum</span>
+                <span class="method-start">109 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">RegPageTest</span>
-                <span class="method-start">91 ms</span>
+                <span class="method-name">sum</span>
+                <span class="method-start">118 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">SearchPageTest</span>
-                <span class="method-start">125 ms</span>
+                <span class="method-name">sum</span>
+                <span class="method-start">134 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">sum</span>
+                <span class="method-start">164 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">sum</span>
+                <span class="method-start">191 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">sum</span>
+                <span class="method-start">203 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">sum</span>
+                <span class="method-start">217 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">sum</span>
+                <span class="method-start">235 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">sum</span>
+                <span class="method-start">251 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
