--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,12 +1,24 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="cd7699">  <td>20/02/21 13:04:06</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNgFeatures.HomePageTest()[pri:0, instance:com.java.testing.youtube.TestNgFeatures@75db5df9]">HomePageTest</td> 
-  <td>main@1376790324</td>   <td></td> </tr>
-<tr bgcolor="cd7699">  <td>20/02/21 13:04:06</td>   <td>32</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNgFeatures.RegPageTest()[pri:0, instance:com.java.testing.youtube.TestNgFeatures@75db5df9]">RegPageTest</td> 
-  <td>main@1376790324</td>   <td></td> </tr>
-<tr bgcolor="cd7699">  <td>20/02/21 13:04:06</td>   <td>66</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNgFeatures.SearchPageTest()[pri:0, instance:com.java.testing.youtube.TestNgFeatures@75db5df9]">SearchPageTest</td> 
-  <td>main@1376790324</td>   <td></td> </tr>
-<tr bgcolor="cd7699">  <td>20/02/21 13:04:06</td>   <td>-61</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNgFeatures.loginTest()[pri:0, instance:com.java.testing.youtube.TestNgFeatures@75db5df9]">loginTest</td> 
-  <td>main@1376790324</td>   <td></td> </tr>
+<tr bgcolor="b0b365">  <td>20/02/21 14:13:09</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InvocationCountTest.sum()[pri:0, instance:com.java.testing.youtube.InvocationCountTest@58a9760d]">sum</td> 
+  <td>main@2123444693</td>   <td></td> </tr>
+<tr bgcolor="b0b365">  <td>20/02/21 14:13:09</td>   <td>116</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InvocationCountTest.sum()[pri:0, instance:com.java.testing.youtube.InvocationCountTest@58a9760d]">sum</td> 
+  <td>main@2123444693</td>   <td></td> </tr>
+<tr bgcolor="b0b365">  <td>20/02/21 14:13:09</td>   <td>125</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InvocationCountTest.sum()[pri:0, instance:com.java.testing.youtube.InvocationCountTest@58a9760d]">sum</td> 
+  <td>main@2123444693</td>   <td></td> </tr>
+<tr bgcolor="b0b365">  <td>20/02/21 14:13:09</td>   <td>141</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InvocationCountTest.sum()[pri:0, instance:com.java.testing.youtube.InvocationCountTest@58a9760d]">sum</td> 
+  <td>main@2123444693</td>   <td></td> </tr>
+<tr bgcolor="b0b365">  <td>20/02/21 14:13:10</td>   <td>171</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InvocationCountTest.sum()[pri:0, instance:com.java.testing.youtube.InvocationCountTest@58a9760d]">sum</td> 
+  <td>main@2123444693</td>   <td></td> </tr>
+<tr bgcolor="b0b365">  <td>20/02/21 14:13:10</td>   <td>198</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InvocationCountTest.sum()[pri:0, instance:com.java.testing.youtube.InvocationCountTest@58a9760d]">sum</td> 
+  <td>main@2123444693</td>   <td></td> </tr>
+<tr bgcolor="b0b365">  <td>20/02/21 14:13:10</td>   <td>210</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InvocationCountTest.sum()[pri:0, instance:com.java.testing.youtube.InvocationCountTest@58a9760d]">sum</td> 
+  <td>main@2123444693</td>   <td></td> </tr>
+<tr bgcolor="b0b365">  <td>20/02/21 14:13:10</td>   <td>224</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InvocationCountTest.sum()[pri:0, instance:com.java.testing.youtube.InvocationCountTest@58a9760d]">sum</td> 
+  <td>main@2123444693</td>   <td></td> </tr>
+<tr bgcolor="b0b365">  <td>20/02/21 14:13:10</td>   <td>242</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InvocationCountTest.sum()[pri:0, instance:com.java.testing.youtube.InvocationCountTest@58a9760d]">sum</td> 
+  <td>main@2123444693</td>   <td></td> </tr>
+<tr bgcolor="b0b365">  <td>20/02/21 14:13:10</td>   <td>258</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InvocationCountTest.sum()[pri:0, instance:com.java.testing.youtube.InvocationCountTest@58a9760d]">sum</td> 
+  <td>main@2123444693</td>   <td></td> </tr>
 </table>
