--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="ffa2a9">  <td>20/03/12 20:49:17</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestProject.Test()[pri:0, instance:com.java.testing.youtube.TestProject@76ed1b7c]">Test</td> 
-  <td>main@81412691</td>   <td></td> </tr>
-<tr bgcolor="ffa2a9">  <td>20/03/12 20:48:50</td>   <td>-27163</td> <td title="&gt;&gt;TestProject.invokeBrowser()[pri:0, instance:com.java.testing.youtube.TestProject@76ed1b7c]">&gt;&gt;invokeBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@81412691</td>   <td></td> </tr>
-<tr bgcolor="ffa2a9">  <td>20/03/12 20:49:38</td>   <td>20270</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestProject.tearDown()[pri:0, instance:com.java.testing.youtube.TestProject@76ed1b7c]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@81412691</td>   <td></td> </tr>
+<tr bgcolor="7ef87a">  <td>20/07/11 17:14:22</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FbLoginTest.init()[pri:0, instance:testNG.FbLoginTest@11fc564b]">init</td> 
+  <td>main@963815509</td>   <td></td> </tr>
+<tr bgcolor="a9e4eb">  <td>20/07/11 17:14:04</td>   <td>-17839</td> <td title="&gt;&gt;TestBase.initialize()[pri:0, instance:testNG.FbLoginTest@11fc564b]">&gt;&gt;initialize</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@963815509</td>   <td></td> </tr>
+<tr bgcolor="a9e4eb">  <td>20/07/11 17:14:23</td>   <td>1188</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:testNG.FbLoginTest@11fc564b]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@963815509</td>   <td></td> </tr>
 </table>
